[project]
name = "acp"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "n4okins", email = "63445867+n4okins@users.noreply.github.com" }
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "requests>=2.31.0",
    "pydantic>=2.7.1",
    "lxml>=5.2.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.4",
    "pytest>=8.2.0",
]

[project.scripts]
acp = "acp:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/acp"]
